<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.socialsnap.UploadUI" >

    <item
        android:id="@+id/char_counter"
        android:actionViewClass="android.widget.TextView"
        android:showAsAction="always"
        android:title="@string/counter"/>
    <item
        android:id="@+id/action_camera"
		android:icon="@drawable/ic_action_camera"
        android:showAsAction="always"
        android:title="@string/camera"/>
    
    <item
        android:id="@+id/action_upload"
        android:icon="@drawable/ic_action_upload"
        android:showAsAction="always"
        android:title="@string/upload_string"/>
    
     <item
        android:id="@+id/info"
        android:showAsAction="never"
        android:title="@string/info"/>

</menu>